# robotic_finale

./: README.md
install/: local_setup.sh  setup.sh
log/: latest_build
robot_description/: CMakeLists.txt
robot_description/config/: amcl.yaml  gz_bridge.yaml  map_server.yaml
robot_description/launch/: astar.launch.py  classic.launch.py  localization.launch.py
robot_description/maps/: map.yaml
robot_description/rviz/: config.rviz
robot_description/scripts/: astar_planner_node.cpp  mpc_path_follower_node.cpp  pid_path_follower_node.cpp
